# frugurt-lang

./: README.md
converter/: converter.cabal  stack.yaml  test.fru
converter/src/: Debugize.hs  Jsonize.hs  Main.hs  Tokenize.hs  Treeanize.hs
docs/: concepts.md  keywords.md
docs/ast-json-format/: ast-json-format.md
examples/: benchmark.fru  control-flow.fru  currying.fru  higher-order-functions-2.fru  higher-order-functions.fru  simple-function.fru  struct.fru
examples(NOT AVALIBLE NOW)/: class.fru  control-flow.md  data.fru  hello-world.fru  operators.fru  struct.fru
rfruit/: Cargo.toml
rfruit/src/: main.rs
rfruit/src/interpreter/: ast_json_parser.rs  builtin_functions.rs  builtin_operators.rs  builtins.rs  error.rs  expression.rs  identifier.rs  mod.rs  runner.rs  scope.rs  statement.rs  value.rs  watch.rs
rfruit/src/interpreter/builtins/: functions.rs  mod.rs  operators.rs
rfruit/src/interpreter/value/: function.rs  mod.rs  oop.rs  operator.rs  value.rs
