cabal-version:       2.2

name:                converter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/converter#readme
license:             BSD-3-Clause

author:              Author name here
maintainer:          example@example.com
copyright:           2024 Author name here
category:            Web
build-type:          Simple

executable converter
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Tokenize
                       Treeanize
                       Jsonize
  default-language:    Haskell2010
  build-depends:       
    , base >= 4.7 && < 5
    , megaparsec
    , containers
    , binary
    , text
    , scientific
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
